# zhserver

./: .gitignore  Documentation.html  Documentation.org  LICENCE  LICENSE  Makefile  README.html  README.org  Server.hs  ZHServer.hs  Zotero.hs  copylibs.sh  fpjs.org  fpjs2.js  index.html  loader.js  loader2.js  shell.nix  stack.yaml  style.css  zhclient.sh  zhserver.cabal  zhserver.conf  zhserver.sh
assets/: README.org  fpjs.js  fpjs2.js  index.html  loader.js  loader2.js  style.css
database/: README.org  exportables.hs  zotero-sqlite-schema.sql  zotero-test.sql
docs/: DBUtils.html  Main.html  Zotero.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-U.html  doc-index-W.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html  mini_DBUtils.html  mini_Main.html  mini_Zotero.html
docs/src/: DBUtils.html  Main.html  Zotero.html
scripts/: sqlite2pg.scm  updatedb.sh  zotero.sqlite-journal  zoteroEmpty.sqlite
scritps/: createDatabase.sh  startDatabase.sh  tables.pgsql
src/: DBUtils.hs  ZHServer.hs  Zotero.hs  zhclient.hs  zhserver.conf
