name:                zhserver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/caiorss/zhserver
license:             PublicDomain
license-file:        LICENSE
author:              Caio Rodrigues
maintainer:          caiorss.rodrigues@gmail.com
copyright:           2017 Caio Rodrigues
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Zotero 

--   build-depends:       base >= 4.7 && < 5
--                      , mtl
--                      , transformers
--                      , filepath
--                      , text
--                      , directory
--                      , aeson
--                      , random
--                      , bytestring
--                      , HDBC
--                      , HDBC-sqlite3
--                      , HDBC-postgresql             
--                      , happstack-server
  
--   default-language:    Haskell2010

executable zhserver-exe
  hs-source-dirs:      src
  main-is:             ZHServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , simple
                     , containers
                     , mtl
                     , transformers
                     , filepath
                     , text
                     , directory
                     , aeson
                     , random
                     , bytestring
                     , HDBC
                     , HDBC-sqlite3
                     , HDBC-postgresql             
                     , happstack-server
                     , pretty-show

                     
                     
  default-language:    Haskell2010

-- test-suite zhserver-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , simple
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caiorss/zhserver
